# ATM_Controller-with-django

./: README.md  db.sqlite3  initial_data.json  pyproject.toml
Accounts/: admin.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
Accounts/api/: permissions.py  serializers.py  urls.py  views.py
Accounts/migrations/: 0001_initial.py  0002_accountinfo_remove_cardinfo_balance_and_more.py  0002_auto_20221201_0858.py  0002_auto_20221201_0904.py  0002_remove_accountinfo_id_and_more.py  0003_remove_cardinfo_id_alter_cardinfo_card_number.py
administrators/: admin.py  decorator.py  decorators.py  forms.py  models.py  urls.py  views.py
administrators/api/: serializers.py  urls.py  views.py
administrators/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: balance.html  base.html  deposit.html  home.html  insertcard.html  withdraw.html
templates/account/: balance.html  deposit.html  transfer.html  withdraw.html
templates/admin/: Admin-home.html  AdminLogin.html  ResetPin.html  admin-base.html  updatecard.html
templates/partials/: admin-nav.html  nav.html
templates/transaction/: transaction-history.html  transaction.html
transactions/: models.py  services.py
transactions/api/: serializers.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_date.py
