[tool.poetry]
name = "atm-django"
version = "0.1.0"
description = ""
authors = ["hongsub <hong9506@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "atm_django"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
